aggiunto header e il suo css

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,37 @@
-//
+
+    // .navbar{
+    //     display: flex;
+    //     justify-content: space-around;
+    //     max-width: 1500px;
+    //     margin: 0 auto;
+    //     align-items: center;
+    // }
+    
+    // ul{
+    //     padding: 43px;
+    // }
+    // ul li{
+    //     display: inline;
+    //     list-style: none;
+    //     padding: 1rem;
+    //     font-size: 0.9rem;
+    //     font-weight: bolder;
+    //     padding: 39px 13px;
+    //     &:hover{
+    //         border-bottom: solid 4px rgb(83, 83, 233);
+    //     }
+    // }
+    // li a{
+    //     text-decoration: none;
+    //     color:black;
+    // }
+    
+    // img{
+    // width: 80px;
+    // height: 80px;
+    // }
+
+h1{
+ color: blue;
+}
+
