--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,37 +1,116 @@
-
-    // .navbar{
-    //     display: flex;
-    //     justify-content: space-around;
-    //     max-width: 1500px;
-    //     margin: 0 auto;
-    //     align-items: center;
-    // }
-    
-    // ul{
-    //     padding: 43px;
-    // }
-    // ul li{
-    //     display: inline;
-    //     list-style: none;
-    //     padding: 1rem;
-    //     font-size: 0.9rem;
-    //     font-weight: bolder;
-    //     padding: 39px 13px;
-    //     &:hover{
-    //         border-bottom: solid 4px rgb(83, 83, 233);
-    //     }
-    // }
-    // li a{
-    //     text-decoration: none;
-    //     color:black;
-    // }
-    
-    // img{
-    // width: 80px;
-    // height: 80px;
-    // }
-
-h1{
- color: blue;
+header{
+    .navbar{
+        display: flex;
+        justify-content: space-around;
+        max-width: 1500px;
+        margin: 0 auto;
+        align-items: center;
+    }
+   
+    ul{
+        padding: 43px;
+    }
+    ul li{
+        display: inline;
+        list-style: none;
+        padding: 1rem;
+        font-size: 0.9rem;
+        font-weight: bolder;
+        padding: 39px 13px;
+        &:hover{
+            border-bottom: solid 4px rgb(83, 83, 233);
+        }
+    }
+    li a{
+        text-decoration: none;
+        color:black;
+    }
+   
+    img{
+    width: 80px;
+    height: 80px;
+    }
 }
+footer{
+    footer{
+        background-image: url(../assets/img/footer-bg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .container{
+        display: flex;
+        max-width: 1200px;
+        margin: 0 auto;
+        justify-content: space-between;
+        height: 380px;
+    }
+    .container2{
+        display: flex;
+        max-width: 1200px;
+        margin: 0 auto;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .container-ul{
+        
+        color: white;
+        display: flex;
+    }
+    ul li{
+        list-style: none;
+    }
+    ul{
+        padding: 30px;
+    }
+    .flex-ul{
+        display: flex;
+    }
+    .font{
+        font-size: 14px;
+       
+    }
+    li h2{
+        padding-bottom: 10px;
+    }
+    a{
+        text-decoration: none;
+        color: rgb(185, 184, 184);
+         &:hover{
+            color: rgb(241, 241, 241);
+         }
+    }
+    .bg-logo{
+        position: relative;
+        bottom: 106px;
+        z-index: 1;
+    }
+    .index-definer{
+        background-color: rgb(51, 51, 51);
+        position: relative;
+        z-index: 50;
+    }
+    .signUpBorder{
+        padding: 12px;
+        border: solid 3px rgb(80, 80, 231);
+        font-weight: bolder;
+        height: 50px;
+    }
+    .footerUL{
+        display: flex;
+    }
+    .footerUL li{
+        padding: 10px
+    }
+    .footerUL li h2{
+        color: rgb(80, 80, 231);;
+    }
+    .bg-last{
+        background-color: rgb(22, 22, 22);
+        height: 130px
+    }
+}
+
+    
+
+
 
