--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Fredoka One", cursive;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Mukta", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 
 header .navbar {
@@ -81,10 +86,10 @@ main ul {
 }
 
 main .comics-container {
-  height: 630px;
   background-color: rgb(24, 24, 24);
   color: white;
   padding-top: 55px;
+  height: 785px;
 }
 
 main .wrapper-comics {
@@ -93,7 +98,7 @@ main .wrapper-comics {
 }
 
 main .button-loader {
-  padding: 10px;
+  padding: 1px;
   background-color: rgb(100, 100, 235);
   width: 15%;
   text-align: center;
@@ -102,9 +107,9 @@ main .button-loader {
 }
 
 main .button-current-series {
-  padding: 10px;
+  padding: 1px;
   background-color: rgb(100, 100, 235);
-  width: 18%;
+  width: 20%;
   text-align: center;
   font-size: bolder;
   font-weight: bold;
@@ -218,11 +223,11 @@ footer .signUpBorder {
   padding: 12px;
   border: solid 3px rgb(80, 80, 231);
   font-weight: bolder;
-  height: 50px;
 }
 
 footer .footerUL {
   display: flex;
+  align-items: center;
 }
 
 footer .footerUL li {
